# rust_wallet

./: Cargo.toml  README.md
src/: addresses.rs  base58.rs  bech32.rs  bip32.rs  bitcoin_keys.rs  coding.rs  hashes.rs  lib.rs  main.rs  shamirs_secret_sharing.rs
src/bip32/: formatting.rs  path.rs  test.rs
src/coding/: base58.rs  bech32.rs
src/shamirs_secret_sharing/: gf8.rs  polynomials.rs  rs1024.rs
